# Projeto-MC-Cripto

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: bitcoin_monte_carlo.ipynb
