[project]
name = "bitcoin-price-prediction"
version = "1.0.0"
description = "Bitcoin price forecasting using Monte Carlo simulation with VaR and CVaR risk metrics"
authors = [
    {name = "Lorraine Santana", email = ""}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.66",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.11.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
